真实向量化

--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,11 @@ VECTOR_DB_API_KEY=
 VECTOR_DB_HTTPS=false
 
 # 嵌入模型配置
-# 可选值: openai, azure, huggingface, local
-EMBEDDING_PROVIDER=openai
+# 可选值: openai, azure, huggingface, local, sentence-transformers
+EMBEDDING_PROVIDER=sentence-transformers
 # OpenAI模型: text-embedding-ada-002, text-embedding-3-small, text-embedding-3-large
 # 本地模型: BAAI/bge-large-zh, GanymedeNil/text2vec-large-chinese
+# sentence-transformers模型: paraphrase-MiniLM-L6-v2, all-MiniLM-L6-v2, all-mpnet-base-v2
 EMBEDDING_MODEL=text-embedding-3-small
 EMBEDDING_API_KEY=your-api-key
 EMBEDDING_API_BASE=https://api.openai.com/v1
